@@ -1,3 +1,8 @@
+2011-05-05  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclListObj.c:	Stop generating string rep of dict when
+	converting to list.
+
 2011-05-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclUtil.c:	Tighten Tcl_SplitList().
